// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus Snapshots renders correctly with accountName in route params 1`] = `
<View
  style={
    {
      "height": "100%",
      "padding": 24,
      "paddingBottom": 32,
    }
  }
>
  <RCTScrollView
    style={
      {
        "marginBottom": 0,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 24,
            "rowGap": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Bold",
              "fontSize": 32,
              "letterSpacing": 0,
              "lineHeight": 40,
            }
          }
        >
          Account already exists
        </Text>
        <Image
          resizeMethod="auto"
          source={1}
          style={
            {
              "alignSelf": "center",
              "height": 286,
              "marginHorizontal": "auto",
              "marginVertical": 20,
              "width": 340,
            }
          }
        />
        <View
          style={
            {
              "flexDirection": "column",
              "rowGap": 20,
              "width": "100%",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            A wallet using test@example.com already exists. Do you want to try logging in instead?
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Log in
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#3c4d9d1a",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "marginTop": 16,
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Use a different login method
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`AccountStatus Snapshots renders correctly with type="found" 1`] = `
<View
  style={
    {
      "height": "100%",
      "padding": 24,
      "paddingBottom": 32,
    }
  }
>
  <RCTScrollView
    style={
      {
        "marginBottom": 0,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 24,
            "rowGap": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Bold",
              "fontSize": 32,
              "letterSpacing": 0,
              "lineHeight": 40,
            }
          }
        >
          Account already exists
        </Text>
        <Image
          resizeMethod="auto"
          source={1}
          style={
            {
              "alignSelf": "center",
              "height": 286,
              "marginHorizontal": "auto",
              "marginVertical": 20,
              "width": 340,
            }
          }
        />
        <View
          style={
            {
              "flexDirection": "column",
              "rowGap": 20,
              "width": "100%",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            A wallet using [missing {{accountName}} value] already exists. Do you want to try logging in instead?
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Log in
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#3c4d9d1a",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "marginTop": 16,
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Use a different login method
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`AccountStatus Snapshots renders correctly with type="not_exist" 1`] = `
<View
  style={
    {
      "height": "100%",
      "padding": 24,
      "paddingBottom": 32,
    }
  }
>
  <RCTScrollView
    style={
      {
        "marginBottom": 0,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 24,
            "rowGap": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Bold",
              "fontSize": 32,
              "letterSpacing": 0,
              "lineHeight": 40,
            }
          }
        >
          Account not found
        </Text>
        <Image
          resizeMethod="auto"
          source={1}
          style={
            {
              "alignSelf": "center",
              "height": 286,
              "marginHorizontal": "auto",
              "marginVertical": 20,
              "width": 340,
            }
          }
        />
        <View
          style={
            {
              "flexDirection": "column",
              "rowGap": 20,
              "width": "100%",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            We couldn’t find a wallet for [missing {{accountName}} value]. Do you want to create a new one with this login?
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Create a new wallet
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#3c4d9d1a",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "marginTop": 16,
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Use a different login method
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
